Avoid left align text on small screens

--- a/styles/Linktree.module.css
+++ b/styles/Linktree.module.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   height: calc(20vh - 1rem);
+  text-align: center;
 }
 
 .header h1 {
